--- a/top_stories/halfweek/page6.html
+++ b/top_stories/halfweek/page6.html
@@ -221,7 +221,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17290805">
                                         
-                                            12 comments
+                                            13 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=subho406">subho406</a></strong> &nbsp;•&nbsp;
@@ -431,17 +431,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.yours.org/content/first-atomic-bet-on-bitcoin-cash-using-new-opcodes-fc83fe2e0eda">First atomic bet on Bitcoin Cash using new opcodes</a>
+                                    <a href="https://www.erlang-solutions.com/blog/gluon-vm-virtual-machine-for-beam.html">Gluon – A pocket-size BEAM VM</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17283865">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17292234">
                                         
-                                            48 comments
+                                            34 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=ca98am79">ca98am79</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528722670"
+                                            href="https://news.ycombinator.com/user?id=ghosthamlet">ghosthamlet</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528802007"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     75 points
                                 </span>
@@ -489,7 +489,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528809009" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528809606" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
