--- a/top_stories/halfweek/page5.html
+++ b/top_stories/halfweek/page5.html
@@ -551,19 +551,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.xtof.info/blog/?p=985">The 640K memory limit of MS-DOS</a>
+                                    <a href="https://arxiv.org/abs/1806.00044">Text Normalization using Memory Augmented Neural Networks</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17274672">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17290805">
                                         
-                                            68 comments
+                                            13 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=ingve">ingve</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528574145"
+                                            href="https://news.ycombinator.com/user?id=subho406">subho406</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528779584"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    90 points
+                                    93 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528809606" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528810208" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
