--- a/top_stories/halfweek/page6.html
+++ b/top_stories/halfweek/page6.html
@@ -407,17 +407,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://stratechery.com/2018/the-scooter-economy/">The Scooter Economy</a>
+                                    <a href="https://djw.cs.washington.edu/papers/mimo_for_dummies.pdf">802.11 with Multiple Antennas for Dummies [pdf]</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17284094">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17290302">
                                         
-                                            98 comments
+                                            9 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=djug">djug</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528724637"
+                                            href="https://news.ycombinator.com/user?id=gballan">gballan</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528771230"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     77 points
                                 </span>
@@ -431,19 +431,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.yours.org/content/first-atomic-bet-on-bitcoin-cash-using-new-opcodes-fc83fe2e0eda">First atomic bet on Bitcoin Cash using new opcodes</a>
+                                    <a href="https://stratechery.com/2018/the-scooter-economy/">The Scooter Economy</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17283865">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17284094">
                                         
-                                            48 comments
+                                            98 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=ca98am79">ca98am79</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528722670"
+                                            href="https://news.ycombinator.com/user?id=djug">djug</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528724637"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    75 points
+                                    77 points
                                 </span>
                             </td>
                         </tr>
@@ -489,7 +489,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528811407" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528812008" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
