--- a/top_stories/halfweek/page3.html
+++ b/top_stories/halfweek/page3.html
@@ -527,17 +527,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://eng.uber.com/mysql-migration/">Why Uber Engineering Switched from Postgres to MySQL (2016)</a>
+                                    <a href="https://github.com/kvakvs/gluonvm1">Gluon – A pocket-size BEAM VM</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17280239">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17292234">
                                         
-                                            47 comments
+                                            44 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=DDerTyp">DDerTyp</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528666109"
+                                            href="https://news.ycombinator.com/user?id=ghosthamlet">ghosthamlet</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528802007"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     126 points
                                 </span>
@@ -551,19 +551,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://github.com/tducret/amazon-scraper-python">Amazon2csv: Amazon products scraper to CSV (no API token required)</a>
+                                    <a href="https://eng.uber.com/mysql-migration/">Why Uber Engineering Switched from Postgres to MySQL (2016)</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17280460">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17280239">
                                         
-                                            53 comments
+                                            47 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=tducret">tducret</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528668773"
+                                            href="https://news.ycombinator.com/user?id=DDerTyp">DDerTyp</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528666109"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    125 points
+                                    126 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528816210" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528816808" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
