--- a/top_stories/week/page1.html
+++ b/top_stories/week/page1.html
@@ -299,7 +299,7 @@
                                             href="https://news.ycombinator.com/user?id=jseliger">jseliger</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528759098"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    461 points
+                                    462 points
                                 </span>
                             </td>
                         </tr>
@@ -365,13 +365,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17289048">
                                         
-                                            124 comments
+                                            125 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=sbr464">sbr464</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528754804"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    410 points
+                                    411 points
                                 </span>
                             </td>
                         </tr>
@@ -551,19 +551,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.indiehackers.com/round-table/how-did-you-find-your-earliest-users">How to Find Your Earliest Users</a>
+                                    <a href="https://medium.com/s/trustissues/the-lifespan-of-a-lie-d869212b1f62">The Lifespan of a Lie – Why can’t we escape the Stanford Prison Experiment?</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17268363">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17287319">
                                         
-                                            44 comments
+                                            167 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=ChanningAllen">ChanningAllen</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528482439"
+                                            href="https://news.ycombinator.com/user?id=fermigier">fermigier</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528743459"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    353 points
+                                    354 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528820409" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528821010" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
