--- a/top_stories/week/page6.html
+++ b/top_stories/week/page6.html
@@ -407,17 +407,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.figure-eight.com/building-the-software-2-0-stack-by-andrej-karpathy-from-tesla/">Building the Software 2.0 Stack by Andrej Karpathy [video]</a>
+                                    <a href="https://milanote.com/the-work/the-story-behind-susan-kares-iconic-design-work-for-apple">The Story Behind Susan Kare’s Iconic Design Work for Apple</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17280454">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17290055">
                                         
-                                            93 comments
+                                            44 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=fmihaila">fmihaila</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528668679"
+                                            href="https://news.ycombinator.com/user?id=oliebol">oliebol</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528766726"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     203 points
                                 </span>
@@ -431,17 +431,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.toptal.com/cross-platform/haxe-language-cross-platform">Haxe: Cross-Platform Development's Best-Kept Secret</a>
+                                    <a href="https://www.figure-eight.com/building-the-software-2-0-stack-by-andrej-karpathy-from-tesla/">Building the Software 2.0 Stack by Andrej Karpathy [video]</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17255490">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17280454">
                                         
-                                            41 comments
+                                            93 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=kevin_bloch">kevin_bloch</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528377578"
+                                            href="https://news.ycombinator.com/user?id=fmihaila">fmihaila</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528668679"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     203 points
                                 </span>
@@ -489,7 +489,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528820409" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528821010" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
