--- a/top_stories/week/page4.html
+++ b/top_stories/week/page4.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://en.wikipedia.org/wiki/Hair_ice">Hair Ice</a>
+                                    <a href="https://twitter.com/DanielMicay/status/1006299769214562305">CopperheadOS has imploded</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17292623">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17289536">
                                         
-                                            40 comments
+                                            131 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=lentil_soup">lentil_soup</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528806826"
+                                            href="https://news.ycombinator.com/user?id=nitrohorse">nitrohorse</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528760102"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    270 points
+                                    277 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528830009" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528830607" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
