--- a/top_stories/halfweek/page5.html
+++ b/top_stories/halfweek/page5.html
@@ -551,19 +551,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.bloomberg.com/news/articles/2018-06-11/germany-orders-daimler-to-recall-774-000-diesel-cars-in-europe">Germany Orders Daimler to Recall 774,000 Diesels in Europe</a>
+                                    <a href="https://pfrazee.hashbase.io/blog/dat-and-servers">How do dat:// sites interact with servers?</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17286400">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17295226">
                                         
-                                            69 comments
+                                            32 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=felixbraun">felixbraun</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528737843"
+                                            href="https://news.ycombinator.com/user?id=pfraze">pfraze</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528822677"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    101 points
+                                    102 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528832407" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528833009" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
