--- a/top_stories/halfweek/page5.html
+++ b/top_stories/halfweek/page5.html
@@ -365,7 +365,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17292940">
                                         
-                                            172 comments
+                                            173 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=petethomas">petethomas</a></strong> &nbsp;•&nbsp;
@@ -551,17 +551,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://nautil.us/issue/61/coordinates/the-larger-the-theater-the-faster-the-music">What Time Looks Like to Philip Glass</a>
+                                    <a href="https://calver.org/">Calendar Versioning</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17277433">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17278936">
                                         
-                                            55 comments
+                                            43 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=dnetesn">dnetesn</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528625503"
+                                            href="https://news.ycombinator.com/user?id=dmoreno">dmoreno</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528649613"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     106 points
                                 </span>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528837809" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528838405" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
