--- a/top_stories/daily/page5.html
+++ b/top_stories/daily/page5.html
@@ -239,19 +239,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://broadly.vice.com/en_us/article/8xe4yz/menstrual-app-period-tracker-data-cyber-security">Your Menstrual App Is Probably Selling Data About Your Body</a>
+                                    <a href="https://www.layoutit.com/grid/#">CSS Grid Generator with support for subgrids, named areas and legacy browsers</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17290975">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17294046">
                                         
-                                            8 comments
+                                            comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=andrewxhill">andrewxhill</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528782425"
+                                            href="https://news.ycombinator.com/user?id=rofko">rofko</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528816621"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    24 points
+                                    7 points
                                 </span>
                             </td>
                         </tr>
@@ -293,7 +293,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17291195">
                                         
-                                            26 comments
+                                            27 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=blowski">blowski</a></strong> &nbsp;•&nbsp;
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528837809" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528838405" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
