--- a/top_stories/week/page3.html
+++ b/top_stories/week/page3.html
@@ -227,7 +227,7 @@
                                             href="https://news.ycombinator.com/user?id=adventured">adventured</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528787730"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    322 points
+                                    323 points
                                 </span>
                             </td>
                         </tr>
@@ -239,19 +239,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://en.wikipedia.org/wiki/Hair_ice">Hair Ice</a>
+                                    <a href="https://www.destroyallsoftware.com/blog/2017/the-biggest-and-weirdest-commits-in-linux-kernel-git-history">The Biggest and Weirdest Commits in Linux Kernel Git History (2017)</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17292623">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17265151">
                                         
-                                            46 comments
+                                            73 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=lentil_soup">lentil_soup</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528806826"
+                                            href="https://news.ycombinator.com/user?id=swsieber">swsieber</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528464958"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    319 points
+                                    323 points
                                 </span>
                             </td>
                         </tr>
@@ -413,7 +413,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17290029">
                                         
-                                            212 comments
+                                            213 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=sohkamyung">sohkamyung</a></strong> &nbsp;•&nbsp;
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528838405" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528839009" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
