--- a/top_stories/halfweek/page6.html
+++ b/top_stories/halfweek/page6.html
@@ -371,7 +371,7 @@
                                             href="https://news.ycombinator.com/user?id=daschaefer">daschaefer</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528811148"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    103 points
+                                    104 points
                                 </span>
                             </td>
                         </tr>
@@ -395,7 +395,7 @@
                                             href="https://news.ycombinator.com/user?id=tristanj">tristanj</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528829347"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    102 points
+                                    103 points
                                 </span>
                             </td>
                         </tr>
@@ -431,19 +431,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://bigthink.com/21st-century-spirituality/study-confirms-lifting-weights-reduces-depression">Study confirms lifting weights reduces depression</a>
+                                    <a href="https://www.bloomberg.com/news/articles/2018-06-12/at-t-wins-antitrust-ruling-allowing-takeover-of-time-warner">AT&T Cleared by Judge to Buy Time Warner</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17296557">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17297763">
                                         
-                                            54 comments
+                                            130 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=vldx">vldx</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528829164"
+                                            href="https://news.ycombinator.com/user?id=coloneltcb">coloneltcb</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528836076"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    98 points
+                                    101 points
                                 </span>
                             </td>
                         </tr>
@@ -489,7 +489,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528845008" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528845605" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
