--- a/top_stories/halfweek/page6.html
+++ b/top_stories/halfweek/page6.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://groups.google.com/forum/#!topic/comp.os.minix/wlhw16QWltI%5B1-25%5D">Linux is Obsolete (1992)</a>
+                                    <a href="https://polyaxon.com/">Polyaxon – An open source platform for reproducible machine learning at scale</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17294907">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17276509">
                                         
-                                            153 comments
+                                            21 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=tim_sw">tim_sw</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528821117"
+                                            href="https://news.ycombinator.com/user?id=jonbaer">jonbaer</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528604691"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    108 points
+                                    109 points
                                 </span>
                             </td>
                         </tr>
@@ -239,17 +239,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.bloomberg.com/news/features/2018-06-12/a-quant-king-and-a-drug-hunter-join-in-a-quest-to-find-new-cures">The Quant King, the Drug Hunter, and the Quest to Unlock New Cures</a>
+                                    <a href="https://groups.google.com/forum/#!topic/comp.os.minix/wlhw16QWltI%5B1-25%5D">Linux is Obsolete (1992)</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17293157">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17294907">
                                         
-                                            42 comments
+                                            153 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=daschaefer">daschaefer</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528811148"
+                                            href="https://news.ycombinator.com/user?id=tim_sw">tim_sw</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528821117"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     108 points
                                 </span>
@@ -443,7 +443,7 @@
                                             href="https://news.ycombinator.com/user?id=fanf2">fanf2</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528843382"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    100 points
+                                    102 points
                                 </span>
                             </td>
                         </tr>
@@ -489,7 +489,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528852809" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528853410" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
