--- a/top_stories/halfweek/page3.html
+++ b/top_stories/halfweek/page3.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://pfrazee.hashbase.io/blog/dat-and-servers">How do dat:// sites interact with servers?</a>
+                                    <a href="https://medium.com/@val_deleplace/go-code-refactoring-the-23x-performance-hunt-156746b522f7">Go code refactoring: the 23x performance hunt</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17295226">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17283811">
                                         
-                                            41 comments
+                                            53 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=pfraze">pfraze</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528822677"
+                                            href="https://news.ycombinator.com/user?id=anastalaz">anastalaz</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528722034"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    165 points
+                                    166 points
                                 </span>
                             </td>
                         </tr>
@@ -509,13 +509,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17293598">
                                         
-                                            53 comments
+                                            54 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=peeze">peeze</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528814030"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    138 points
+                                    139 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528854604" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528855206" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
