--- a/top_stories/week/page4.html
+++ b/top_stories/week/page4.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.independent.co.uk/news/health/psychedelic-drugs-brain-repair-lsd-depression-anxiety-lsd-dmt-amphetamines-ketamine-a8395511.html">Psychedelics could heal brain cells in people suffering from depression: study</a>
+                                    <a href="https://twitter.com/DanielMicay/status/1006299769214562305">CopperheadOS has imploded</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17295205">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17289536">
                                         
-                                            180 comments
+                                            147 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=pmoriarty">pmoriarty</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528822598"
+                                            href="https://news.ycombinator.com/user?id=nitrohorse">nitrohorse</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528760102"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    282 points
+                                    284 points
                                 </span>
                             </td>
                         </tr>
@@ -251,7 +251,7 @@
                                             href="https://news.ycombinator.com/user?id=danicgross">danicgross</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528754128"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    278 points
+                                    279 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528857607" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528858209" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
