--- a/top_stories/daily/page2.html
+++ b/top_stories/daily/page2.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.bbc.com/news/technology-44453382">Spanish football league defends phone 'spying'</a>
+                                    <a href="https://groups.google.com/forum/#!topic/comp.os.minix/wlhw16QWltI%5B1-25%5D">Linux is Obsolete (1992)</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17296449">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17294907">
                                         
-                                            26 comments
+                                            157 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=Element_">Element_</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528828630"
+                                            href="https://news.ycombinator.com/user?id=tim_sw">tim_sw</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528821117"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    82 points
+                                    109 points
                                 </span>
                             </td>
                         </tr>
@@ -317,13 +317,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17296102">
                                         
-                                            40 comments
+                                            43 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=LarryDarrell">LarryDarrell</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528826990"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    74 points
+                                    75 points
                                 </span>
                             </td>
                         </tr>
@@ -347,7 +347,7 @@
                                             href="https://news.ycombinator.com/user?id=daschaefer">daschaefer</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528811148"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    114 points
+                                    115 points
                                 </span>
                             </td>
                         </tr>
@@ -371,7 +371,7 @@
                                             href="https://news.ycombinator.com/user?id=adriansky">adriansky</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528840272"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    34 points
+                                    36 points
                                 </span>
                             </td>
                         </tr>
@@ -443,7 +443,7 @@
                                             href="https://news.ycombinator.com/user?id=PleaseHelpMe">PleaseHelpMe</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528820084"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    80 points
+                                    81 points
                                 </span>
                             </td>
                         </tr>
@@ -491,7 +491,7 @@
                                             href="https://news.ycombinator.com/user?id=ilamont">ilamont</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528813904"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    92 points
+                                    93 points
                                 </span>
                             </td>
                         </tr>
@@ -539,7 +539,7 @@
                                             href="https://news.ycombinator.com/user?id=acheron">acheron</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528830127"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    49 points
+                                    50 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528860007" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528860607" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
