--- a/top_stories/daily/page3.html
+++ b/top_stories/daily/page3.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://arxiv.org/abs/1803.06824">Are real numbers really real?</a>
+                                    <a href="https://www.wsj.com/articles/macedonia-agrees-to-change-its-name-to-end-bitter-dispute-with-greece-1528820594">Macedonia Agrees to Change Its Name to End Bitter Dispute with Greece</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17291752">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17296742">
                                         
-                                            217 comments
+                                            90 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=d3ckard">d3ckard</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528793871"
+                                            href="https://news.ycombinator.com/user?id=acheron">acheron</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528830127"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    130 points
+                                    51 points
                                 </span>
                             </td>
                         </tr>
@@ -299,7 +299,7 @@
                                             href="https://news.ycombinator.com/user?id=rbanffy">rbanffy</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528838464"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    31 points
+                                    33 points
                                 </span>
                             </td>
                         </tr>
@@ -533,7 +533,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17296827">
                                         
-                                            7 comments
+                                            8 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=rmason">rmason</a></strong> &nbsp;•&nbsp;
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528864209" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528864809" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
