--- a/top_stories/halfweek/page2.html
+++ b/top_stories/halfweek/page2.html
@@ -269,7 +269,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17297763">
                                         
-                                            201 comments
+                                            203 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=coloneltcb">coloneltcb</a></strong> &nbsp;•&nbsp;
@@ -371,7 +371,7 @@
                                             href="https://news.ycombinator.com/user?id=edent">edent</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528805035"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    188 points
+                                    189 points
                                 </span>
                             </td>
                         </tr>
@@ -551,19 +551,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://github.com/git-federation/gitpub">GitPub: An extenstion to ActivityPub for web-based Git services federation</a>
+                                    <a href="https://medium.com/@enjalot/the-trouble-with-d3-4a84f7de011f">The Trouble with D3</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17288727">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17298072">
                                         
-                                            48 comments
+                                            96 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=okket">okket</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528752265"
+                                            href="https://news.ycombinator.com/user?id=danso">danso</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528838092"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    166 points
+                                    167 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528864209" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528864809" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
