--- a/top_stories/halfweek/page4.html
+++ b/top_stories/halfweek/page4.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://github.com/id-Software">Id Software</a>
+                                    <a href="http://legacy.earlham.edu/~mileske/Files/Kant%27s%20An%20Answer%20to%20the%20Question%20What%20is%20Enlightenment.htm">What is Enlightenment? (1784)</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17299209">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17277199">
                                         
-                                            28 comments
+                                            60 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=bane">bane</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528848683"
+                                            href="https://news.ycombinator.com/user?id=anuraag2601">anuraag2601</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528620248"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    140 points
+                                    141 points
                                 </span>
                             </td>
                         </tr>
@@ -275,7 +275,7 @@
                                             href="https://news.ycombinator.com/user?id=tristanj">tristanj</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528829347"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    135 points
+                                    136 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528866005" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528866606" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
