--- a/top_stories/week/page6.html
+++ b/top_stories/week/page6.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://variety.com/2018/biz/news/att-time-warner-merger-approved-1202840369/">AT&T Cleared by Judge to Buy Time Warner</a>
+                                    <a href="http://www.mois.ee/english/">Estonian Manors</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17297763">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17245678">
                                         
-                                            205 comments
+                                            56 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=coloneltcb">coloneltcb</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528836076"
+                                            href="https://news.ycombinator.com/user?id=hydrox24">hydrox24</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528278743"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    207 points
+                                    209 points
                                 </span>
                             </td>
                         </tr>
@@ -489,7 +489,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528867206" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528867808" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
